# FYP_ws

./: launch_lidar_rgb_mapping.launch  launch_sensors.launch  readme.md  recordTopics.bash  sensorFusion.launch  sensorTransforms.launch
Advanced_Navigation_ANPP_Logs/: Log_22-10-13_13-24-22.anpp
devel/: .catkin  local_setup.sh
devel/include/baraja/: RawUdp.h  RawUdpArray.h  SetPlaytable.h  SetPlaytableRequest.h  SetPlaytableResponse.h
devel/include/camera_control_msgs/: SetBoolRequest.h  SetBoolResponse.h  SetBrightnessRequest.h
devel/include/rtabmap-0.20/rtabmap/core/: Version.h
devel/lib/: librtabmap_utilite.so.0.20.18
devel/lib/advanced_navigation_driver/: advanced_navigation_driver
devel/lib/an-driver/: an-driver
devel/lib/arena_camera/: arena_camera_node  write_device_user_id_to_camera
devel/lib/cloud_relay/: relay
devel/lib/custom_an_driver/: custom_an_driver  custom_ntrip
devel/lib/data_logger/: data_logger
devel/lib/fast_gicp/: gicp_align  gicp_kitti
devel/lib/ndt_omp/: align
devel/lib/pkgconfig/: advanced_navigation_driver.pc  an-driver.pc  arena_camera.pc  baraja.pc  camera_control_msgs.pc  cloud_relay.pc  custom_an_driver.pc  data_logger.pc  fast_gicp.pc  floam.pc  hdl_graph_slam.pc  ndt_omp.pc  ntrip_client.pc  realsense2_camera.pc  realsense2_description.pc  robot_localization.pc  rtabmap_ros.pc
devel/lib/python2.7/dist-packages/hdl_graph_slam/: __init__.py
devel/lib/python2.7/dist-packages/ntrip_client/: __init__.py
devel/lib/python2.7/dist-packages/rtabmap_ros/: __init__.py
devel/lib/robot_localization/: ekf_localization_node  navsat_transform_node  robot_localization_listener_node  test_ros_robot_localization_listener_publisher  ukf_localization_node
devel/lib/rtabmap-0.20/: RTABMapConfig.cmake
devel/lib/rtabmap_ros/: camera  data_player  external_loop_detection_example  icp_odometry  imu_to_tf  map_assembler  map_optimizer  odom_msg_to_tf  point_cloud_assembler  pointcloud_to_depthimage  rgb_sync  rgbd_odometry  rgbd_relay  rgbd_sync  rgbdicp_odometry  rgbdx_sync  rtabmap  rtabmap_point_cloud_aggregator  rtabmapviz  save_objects_example  stereo_camera  stereo_odometry  stereo_sync  voxel_markers  wifi_signal_pub  wifi_signal_sub
devel/share/advanced_navigation_driver/cmake/: advanced_navigation_driverConfig.cmake
devel/share/an-driver/cmake/: an-driverConfig.cmake
devel/share/arena_camera/cmake/: arena_cameraConfig.cmake
devel/share/baraja/cmake/: baraja-msg-extras.cmake  baraja-msg-paths.cmake  barajaConfig.cmake
devel/share/camera_control_msgs/cmake/: camera_control_msgs-msg-paths.cmake  camera_control_msgsConfig.cmake
devel/share/cloud_relay/cmake/: cloud_relayConfig.cmake
devel/share/custom_an_driver/cmake/: custom_an_driverConfig.cmake
devel/share/data_logger/cmake/: data_loggerConfig.cmake
devel/share/fast_gicp/cmake/: fast_gicpConfig.cmake
devel/share/floam/cmake/: floamConfig.cmake
devel/share/hdl_graph_slam/cmake/: hdl_graph_slam-msg-extras.cmake  hdl_graph_slam-msg-paths.cmake  hdl_graph_slamConfig.cmake
devel/share/ndt_omp/cmake/: ndt_ompConfig.cmake
devel/share/ntrip_client/cmake/: ntrip_clientConfig.cmake
devel/share/realsense2_camera/cmake/: realsense2_camera-msg-extras.cmake  realsense2_camera-msg-paths.cmake  realsense2_cameraConfig.cmake
devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
devel/share/robot_localization/cmake/: robot_localizationConfig.cmake
devel/share/rtabmap_ros/cmake/: rtabmap_ros-msg-extras.cmake  rtabmap_ros-msg-paths.cmake  rtabmap_rosConfig.cmake
python_helper_scripts/: ViconOdomNode.py  ViconTFNode.py  lidarAPI.py
src/an-driver/: CMakeLists.txt  package.xml
src/an-driver/src/: an_driver.cpp
src/arena_camera/config/: camera_params.yaml  default.yaml
src/arena_camera/launch/: arena_camera_node.launch  cameraLaunch.launch
src/arena_camera/src/: arena_camera_node.cpp
src/baraja/: CMakeLists.txt  LICENSE.md  README.md  nodelet_baraja.xml  version.json
src/baraja/include/baraja/: baraja_lidar.h  baraja_listener.h  baraja_sensorhead.h  baraja_services.h  bpc_packet.h
src/baraja/launch/: baraja_base.launch  baraja_driver.launch  one_engine_example.launch  two_engine_example.launch
src/baraja/msg/: RawUdp.msg  RawUdpArray.msg
src/baraja/ros/: GroundPlanePublisher.cpp  GroundPlaneSubscriber.cpp
src/baraja/src/: baraja_lidar.cpp  baraja_listener.cpp  baraja_sensorhead.cpp  baraja_services.cpp  bpc_packet.c
src/baraja/srv/: SetPlaytable.srv
src/ntrip_client/: CMakeLists.txt
src/ntrip_client/launch/: ntrip.launch
src/rtabmap_ros/launch/: ICP_only.launch  rtabmap.launch
src/rtabmap_ros/launch/archiveLaunch/: mapping_rgb_lidar.launch  testLaunch.launch
src/rtabmap_ros/launch/config/: rvizConfig.rviz
(+37 files in other folders)
